Add landing_themes api
