# app/controllers/api/v1/landings/landings_controller.rb
@@ -1,11 +1,11 @@
 class Api::V1::Landings::LandingsController < Api::V1::BaseController
   def index
-    landings = current_institution.landings
+    landings = base_scope
     render json: landings, each_serializer: serializer, meta: { total_results: landings.size }
   end
 
   def show
-    landing = Landing.find(params[:id])
+    landing = base_scope.find(params[:id])
     render json: landing, serializer: serializer, meta: { total_themes: landing.landing_themes.size }
   end
 
@@ -14,7 +14,7 @@ class Api::V1::Landings::LandingsController < Api::V1::BaseController
       errors = [{ source: I18n.t('api_pde.query_parameters'), message: I18n.t('api_pde.errors.unrecognized') }]
       render_error_payload(errors: errors, status: 400)
     else
-      landing = Landing.find_by!(partner_url: search_params[:url])
+      landing = base_scope.find_by!(partner_url: search_params[:url])
       render json: landing, serializer: serializer, meta: { total_themes: landing.landing_themes.size }
     end
   end
@@ -27,5 +27,9 @@ class Api::V1::Landings::LandingsController < Api::V1::BaseController
 
   def search_params
     params.permit(:url)
+  end
+
+  def base_scope
+    current_institution.landings.archived(false)
   end
 end
