# app/serializers/api/v1/landing_subject_serializer.rb
@@ -1,0 +1,4 @@
+class Api::V1::LandingSubjectSerializer < ActiveModel::Serializer
+  attributes :id, :title, :slug,
+             :description, :description_explanation, :requires_siret, :requires_location
+end
